add main routing and its children routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <button (click)="login()">login</button>
 <button (click)="logout()">logout</button>
-<div>{{user|json}}</div>
+<!-- <div>{{user|json}}</div> -->
+<router-outlet></router-outlet>
