--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,3 @@
-<p>login works!</p>
+<button (click)="login()">login</button>
+<button (click)="logout()">logout</button>
+<!-- <div>{{user|json}}</div> -->
