leave MainComponent only, add Sidenav

--- a/src/app/main/components/main/main.component.html
+++ b/src/app/main/components/main/main.component.html
@@ -1,4 +1,31 @@
-<p>main works!</p>
-<app-header></app-header>
-<app-sidebar></app-sidebar>
-<router-outlet></router-outlet>
+<div class="main-container"
+     [class.main-is-mobile]="mobileQuery.matches">
+
+  <!-- Header -->
+  <mat-toolbar class="main-toolbar">
+    <button mat-icon-button
+            (click)="Sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <h1 class="main-app-name">CRM</h1>
+  </mat-toolbar>
+
+  <!-- Sidenav -->
+  <mat-sidenav-container class="main-sidenav-container"
+                         [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+    <mat-sidenav #Sidenav
+                 [mode]="mobileQuery.matches ? 'over' : 'side'"
+                 [fixedInViewport]="mobileQuery.matches"
+                 fixedTopGap="56">
+      <mat-nav-list>
+        <a mat-list-item
+           routerLink="."
+           *ngFor="let nav of [1,2,3]">{{nav}}</a>
+      </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
