--- a/src/app/main/components/main/main.component.scss
+++ b/src/app/main/components/main/main.component.scss
@@ -29,3 +29,7 @@ h1.main-app-name {
      `<body>` to be our scrolling element for mobile layouts. */
   flex: 1 0 auto;
 }
+
+.nav-item-label {
+  margin: 0 4px;
+}
