logout button、add AuthGuard to mainModule

--- a/src/app/main/components/main/main.component.html
+++ b/src/app/main/components/main/main.component.html
@@ -8,6 +8,17 @@
       <mat-icon>menu</mat-icon>
     </button>
     <h1 class="main-app-name">CRM</h1>
+
+    <!-- spacer -->
+    <span class="main-spacer"></span>
+
+
+    <button (click)="logout()"
+            mat-button
+            color="primary">
+      <mat-icon>logout</mat-icon>
+      登出
+    </button>
   </mat-toolbar>
 
   <!-- Sidenav -->
