move core outside /app

--- a/src/app/main/components/main/main.component.html
+++ b/src/app/main/components/main/main.component.html
@@ -41,6 +41,8 @@
     </mat-sidenav>
 
     <mat-sidenav-content>
+    <button mat-button
+            color="primary">Primary</button>
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
