--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,3 @@
 <button (click)="login()">login</button>
 <button (click)="logout()">logout</button>
-<!-- <div>{{user|json}}</div> -->
+{{environment|json}}
