--- a/src/app/main/components/main/main.component.scss
+++ b/src/app/main/components/main/main.component.scss
@@ -22,6 +22,10 @@ h1.main-app-name {
   flex: 1 1 auto;
 }
 
+.main-avatar {
+  width: 100%;
+}
+
 .main-sidenav-container {
   /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
      causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
