Add ProductService & add Table.Product RSL policies

--- a/src/app/main/modules/product/product-list/product-list.component.html
+++ b/src/app/main/modules/product/product-list/product-list.component.html
@@ -1,1 +1,4 @@
-<p>product-list works!</p>
+<p (click)="getProducts()">getProducts</p>
+<p (click)="addProduct()">addProduct</p>
+<p (click)="updateProduct()">updateProduct</p>
+<p (click)="deleteProduct()">deleteProduct</p>
