update CallbackComponent style

--- a/src/app/callback/callback.component.html
+++ b/src/app/callback/callback.component.html
@@ -1,1 +1,6 @@
-<p>callback works!</p>
+<div class="callback-container">
+  <mat-progress-spinner class="example-margin"
+                        [color]="'primary'"
+                        [mode]="'indeterminate'">
+  </mat-progress-spinner>
+</div>
