--- a/src/app/components/main/components/main/main.component.html
+++ b/src/app/components/main/components/main/main.component.html
@@ -46,6 +46,7 @@
       <mat-nav-list>
         <a mat-list-item
            [routerLink]="navItem.routerLink"
+           [routerLinkActive]="'active'"
            *ngFor="let navItem of NavList">
           <mat-icon>{{ navItem.icon }}</mat-icon>
           <span class="nav-item-label">
