--- a/src/app/components/main/components/main/main.component.scss
+++ b/src/app/components/main/components/main/main.component.scss
@@ -41,3 +41,14 @@ h1.main-app-name {
 .nav-item-label {
   margin: 0 4px;
 }
+
+.mat-list-item {
+  &.active {
+    background: rgba(63, 81, 181, 0.15);
+    color: #3f51b5;
+
+    &:hover {
+      background: rgba(63, 81, 181, 0.3);
+    }
+  }
+}
