--- a/src/app/components/main/modules/product/product-list/product-list.component.html
+++ b/src/app/components/main/modules/product/product-list/product-list.component.html
@@ -1,8 +1,3 @@
-<!-- <p (click)="getProducts()">getProducts</p>
-<p (click)="addProduct()">addProduct</p>
-<p (click)="updateProduct()">updateProduct</p>
-<p (click)="deleteProduct()">deleteProduct</p> -->
-
 <div class="module-container">
 
   <mat-tab-group>
@@ -73,7 +68,7 @@
       <ng-template #TplCategoryList>
         <div cdkDropList
              class="example-list"
-             (cdkDropListDropped)="'drop($event)'">
+             (cdkDropListDropped)="categoryDrop($event)">
           <div class="example-box"
                *ngFor="let category of categoryList"
                cdkDrag>
