--- a/src/app/components/main/modules/product/product-list/product-list.component.html
+++ b/src/app/components/main/modules/product/product-list/product-list.component.html
@@ -66,6 +66,47 @@
       </div>
 
       <ng-template #TplCategoryList>
+        <table mat-table
+               [dataSource]="categoryList"
+               class="mat-elevation-z8">
+
+          <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+
+          <!-- ColumnOperation Column -->
+          <ng-container [matColumnDef]="ColumnOperation">
+            <th mat-header-cell
+                *matHeaderCellDef> 操作 </th>
+            <td mat-cell
+                *matCellDef="let element; let i = index">
+                {{i}}
+              <mat-icon>menu</mat-icon>
+            </td>
+          </ng-container>
+
+          <!-- Type Column -->
+          <ng-container [matColumnDef]="PCColumn.type">
+            <th mat-header-cell
+                *matHeaderCellDef> 種類 </th>
+            <td mat-cell
+                *matCellDef="let element"> {{element[PCColumn.type]}} </td>
+          </ng-container>
+
+          <!-- Name Column -->
+          <ng-container [matColumnDef]="PCColumn.order">
+            <th mat-header-cell
+                *matHeaderCellDef> Name </th>
+            <td mat-cell
+                *matCellDef="let element"> {{element[PCColumn.order]}} </td>
+          </ng-container>
+
+          <tr mat-header-row
+              *matHeaderRowDef="categoryColumns"></tr>
+          <tr mat-row
+              *matRowDef="let row; columns: categoryColumns;"></tr>
+        </table>
+
+
         <div cdkDropList
              class="example-list"
              (cdkDropListDropped)="categoryDrop($event)">
