--- a/src/app/components/main/modules/product/product-list/product-list.component.html
+++ b/src/app/components/main/modules/product/product-list/product-list.component.html
@@ -81,7 +81,8 @@
                 *matHeaderCellDef> 操作 </th>
             <td mat-cell
                 *matCellDef="let element">
-              <mat-icon cdkDragHandle>reorder</mat-icon>
+              <mat-icon cdkDragHandle
+                        class="drag-handle">reorder</mat-icon>
             </td>
           </ng-container>
 
@@ -106,6 +107,7 @@
           <tr mat-row
               *matRowDef="let row; columns: categoryColumns"
               cdkDrag
+              cdkDragLockAxis="y"
               [cdkDragData]="row"></tr>
         </table>
       </ng-template>
