--- a/src/app/components/main/modules/product/product-list/product-list.component.html
+++ b/src/app/components/main/modules/product/product-list/product-list.component.html
@@ -134,7 +134,7 @@
             <th mat-header-cell
                 *matHeaderCellDef> 順序 </th>
             <td mat-cell
-                *matCellDef="let element"> {{ element[PCColumn.order] }} </td>
+                *matCellDef="let element; let index = index;"> {{ index + 1 }} </td>
           </ng-container>
 
           <!-- PCColumn.type -->
