--- a/src/app/components/main/modules/product/product-list/product-list.component.html
+++ b/src/app/components/main/modules/product/product-list/product-list.component.html
@@ -28,50 +28,66 @@
       <mat-divider></mat-divider>
 
       <!-- Content -->
-      <table *ngIf="productList.length > 0; else TplNoData"
-             mat-table
-             [dataSource]="productList"
-             class="mat-elevation-z8">
+      <div *ngIf="ui.loadingProducts else TplProductTable"
+           fxLayout="row"
+           fxLayoutAlign="center center"
+           [style.padding]="'1rem'">
 
-        <!-- IndexColumn -->
-        <ng-container [matColumnDef]="IndexColumn">
-          <th mat-header-cell
-              *matHeaderCellDef> # </th>
-          <td mat-cell
-              *matCellDef="let element; let index = index;">
-            {{ index }}
-          </td>
-        </ng-container>
+        <mat-progress-spinner [mode]="'indeterminate'"></mat-progress-spinner>
+      </div>
 
-        <!-- PCColumn.type -->
-        <ng-container [matColumnDef]="PCColumn.type">
-          <th mat-header-cell
-              *matHeaderCellDef> 產品類別 </th>
-          <td mat-cell
-              *matCellDef="let element"> {{ element[Table.ProductCategory][PCColumn.type] }} </td>
-        </ng-container>
+      <!-- Product Table -->
+      <ng-template #TplProductTable>
+        <table *ngIf="productList.length > 0; else TplNoData"
+               mat-table
+               [dataSource]="productList"
+               class="mat-elevation-z8">
 
-        <!-- PColumn.label -->
-        <ng-container [matColumnDef]="PColumn.label">
-          <th mat-header-cell
-              *matHeaderCellDef> 名稱 </th>
-          <td mat-cell
-              *matCellDef="let element"> {{ element[PColumn.label] }} </td>
-        </ng-container>
+          <!-- IndexColumn -->
+          <ng-container [matColumnDef]="IndexColumn">
+            <th mat-header-cell
+                *matHeaderCellDef> # </th>
+            <td mat-cell
+                *matCellDef="let element; let index = index;">
+              {{ (productPage.pageSize * productPage.pageIndex) + index + 1 }}
+            </td>
+          </ng-container>
 
-        <!-- PColumn.value -->
-        <ng-container [matColumnDef]="PColumn.value">
-          <th mat-header-cell
-              *matHeaderCellDef> 價格 </th>
-          <td mat-cell
-              *matCellDef="let element"> {{ element[PColumn.value] }} </td>
-        </ng-container>
+          <!-- PCColumn.type -->
+          <ng-container [matColumnDef]="PCColumn.type">
+            <th mat-header-cell
+                *matHeaderCellDef> 產品類別 </th>
+            <td mat-cell
+                *matCellDef="let element"> {{ element[Table.ProductCategory][PCColumn.type] }} </td>
+          </ng-container>
 
-        <tr mat-header-row
-            *matHeaderRowDef="productColumns"></tr>
-        <tr mat-row
-            *matRowDef="let row; columns: productColumns"></tr>
-      </table>
+          <!-- PColumn.label -->
+          <ng-container [matColumnDef]="PColumn.label">
+            <th mat-header-cell
+                *matHeaderCellDef> 名稱 </th>
+            <td mat-cell
+                *matCellDef="let element"> {{ element[PColumn.label] }} </td>
+          </ng-container>
+
+          <!-- PColumn.value -->
+          <ng-container [matColumnDef]="PColumn.value">
+            <th mat-header-cell
+                *matHeaderCellDef> 價格 </th>
+            <td mat-cell
+                *matCellDef="let element"> {{ element[PColumn.value] }} </td>
+          </ng-container>
+
+          <tr mat-header-row
+              *matHeaderRowDef="productColumns"></tr>
+          <tr mat-row
+              *matRowDef="let row; columns: productColumns"></tr>
+        </table>
+      </ng-template>
+
+      <mat-paginator [length]="productPage.length"
+                     [pageSizeOptions]="pageSizeOptions"
+                     (page)="onProductPage($event);">
+      </mat-paginator>
 
     </mat-tab>
 
