--- a/src/app/components/main/modules/product/product-list/product-list.component.html
+++ b/src/app/components/main/modules/product/product-list/product-list.component.html
@@ -77,6 +77,17 @@
                 *matCellDef="let element"> {{ element[PColumn.value] }} </td>
           </ng-container>
 
+          <!-- ColumnOperation -->
+          <ng-container [matColumnDef]="ColumnOperation">
+            <th mat-header-cell
+                *matHeaderCellDef> 操作 </th>
+            <td mat-cell
+                *matCellDef="let element; let index = index">
+              <mat-icon class="pointer"
+                        (click)="editProduct(index)">edit</mat-icon>
+            </td>
+          </ng-container>
+
           <tr mat-header-row
               *matHeaderRowDef="productColumns"></tr>
           <tr mat-row
